--- a/src/app/list-upload/list-upload.component.css
+++ b/src/app/list-upload/list-upload.component.css
@@ -58,7 +58,7 @@
 .arrow-2 {
     width: 60px;
     height: 60px;
-    background: #2d2d86;
+    background: #264d73;
     border-radius: 50%;
     position: absolute;
     top: 20px;
