--- a/src/app/user-profile/user-profile.component.css
+++ b/src/app/user-profile/user-profile.component.css
@@ -52,15 +52,9 @@ nav {
     width: 100%;
     z-index: 1;
     top: 20%;
-    left: 0%;
 }
 
-.wrapperhead {
-    background-image: url(../../assets/pictures/6365.jpg);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-}
+.wrapperhead {}
 
 .uploadlink:hover {
     font-size: 25px;
@@ -107,15 +101,18 @@ p {
 img {
     height: 100%;
     width: 100%;
+    box-shadow: 0 10px 8px 0 rgba(0, 0, 0, 0.2), 0 10px 10px 0 rgba(0, 0, 0, 0.19);
 }
 
 .hoverable {
-    position: sticky;
+    position: absolute;
     display: block;
     cursor: pointer;
     height: 400px;
-    width: 400px;
-    float: left;
+    width: 350px;
+    border: 4px solid white;
+    left: 10%;
+    top: 10%;
 }
 
 .hoverable .hover-text {
