--- a/src/app/user-profile/user-profile.component.css
+++ b/src/app/user-profile/user-profile.component.css
@@ -47,14 +47,21 @@ nav {
 }
 
 .wrapper {
-    background-color: transparent;
     position: absolute;
     width: 100%;
-    z-index: 1;
-    top: 20%;
 }
 
-.wrapperhead {}
+.wrapperhead {
+    background-image: url(../../assets/pictures/profileback.jpg);
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+    filter: blur(2px);
+    -webkit-filter: blur(2px);
+    border: 0.5px solid black;
+    z-index: -1;
+    box-shadow: 0 10px 8px 0 rgba(0, 0, 0, 0.2), 0 10px 10px 0 rgba(0, 0, 0, 0.19);
+}
 
 .uploadlink:hover {
     font-size: 25px;
@@ -103,29 +110,34 @@ img {
     width: 100%;
     box-shadow: 0 10px 8px 0 rgba(0, 0, 0, 0.2), 0 10px 10px 0 rgba(0, 0, 0, 0.19);
     border: 0.5px solid black;
+    margin: 0px auto;
+    border-radius: 50%;
 }
 
 .hoverable {
     position: absolute;
     display: block;
     cursor: pointer;
-    height: 400px;
-    width: 350px;
+    height: 250px;
+    width: 250px;
     border: 4px solid white;
-    left: 10%;
-    top: 10%;
+    left: 50%;
+    top: 30%;
+    transform: translate(-50%, -30%);
+    border-radius: 50%;
 }
 
 .hoverable .hover-text {
     position: absolute;
     display: none;
-    top: 50%;
     left: 50%;
+    top: 50%;
     transform: translate(-50%, -50%);
     z-index: 2;
     font-family: "Times New Roman";
-    font-size: 30px;
+    font-size: 25px;
     color: white;
+    border-radius: 50%;
 }
 
 .hoverable .background {
@@ -137,7 +149,8 @@ img {
     right: 0;
     background-color: rgba(0, 26, 51, 0.5);
     pointer-events: none;
-    z-index: 1;
+    z-index: 3;
+    border-radius: 50%;
 }
 
 .hoverable:hover .hover-text {
@@ -163,4 +176,9 @@ th {
     text-shadow: 2px 2px 3px #aaaaaa;
     width: 200px;
     text-align: center;
+}
+
+.borderless td,
+.borderless th {
+    border: none;
 }
