--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
 
     <h5 class="text-center" style="color:white;text-shadow: 1px 1px 6px #4080bf ;font-weight: normal;font-size: 30px;font-family: Special Elite;">Welcome, {{ uname }}</h5>
     <div class="text-center" style="margin-top:10px ;margin-bottom: 10px;">
-        <img style="width: 200px; border-radius: 50%;margin-top: 15px;" [src]="profile[1] ? profile[1].url : 'https://www.w3schools.com/howto/img_avatar.png'">
+        <img style="width: 200px;height: 200px; border-radius: 50%;margin-top: 15px;border: 2px solid white;" [src]="profile[1] ? profile[1].url : 'https://www.w3schools.com/howto/img_avatar.png'">
 
     </div>
 
