--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,12 +1,15 @@
 <div style="height: 60px;"></div>
-<div style="background-color:#dae6f1;width: 100%;height: 100%;">
+<div style="background-color:#dae6f1;width: 100%;height:auto;
+min-height:30px;
+height:auto !important;        /* for IE as it does not support min-height */
+height:30px; ">
     <div style="width: 90%;margin:0 auto;background-color: #dae6f1;">
         <div class="wrapperhead " style="padding-top:50px;height: 300px;width: 100%;">
 
-            <p>{{ uname }}</p>
+            <p style="position:sticky;color: white;font-size: 50px;text-transform:capitalize;text-align: center;top:40%;">{{ uname }}</p>
         </div>
 
-        <div style="height: 38px;background-color: white;width: 100%;border: 1px solid #d9d9d9;"></div>
+        <div style="height: 38px;background-color: white;width: 100%;border: 1px solid #d9d9d9;box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.19);"></div>
 
         <label class="hoverable text-center" for="fileInput" style="z-index: 2;">
 
@@ -23,66 +26,48 @@
             box-shadow: 0 10px 8px 0 rgba(0, 0, 0, 0.2), 0 10px 10px 0 rgba(0, 0, 0, 0.19);">
              <button (click)="picflag=false" *ngIf="picflag" style="background-color:transparent;border:none;float:right;"> <i class="fa fa-window-close" aria-hidden="true"></i></button><br/><br/>
 
-                <button *ngIf="picflag" class="btn-2 uploadbutton" style="width: 140px;height: 40px;" (click)="delete()">Delete &nbsp;<i class="fas fa-trash-alt"></i></button>
+                <button *ngIf="picflag" class="btn-2 uploadbutton" style="width: 140px;" (click)="delete()">Delete &nbsp;<i class="fas fa-trash-alt"></i></button>
 
-                <button *ngIf="picflag" (click)="upload()" class="btn-2 uploadbutton" style="margin-left:10px;width: 140px;height: 40px;">Upload&nbsp;<i class="fa fa-upload"></i></button>
+                <button *ngIf="picflag" (click)="upload()" class="btn-2 uploadbutton" style="width: 140px;">Upload&nbsp;<i class="fa fa-upload"></i></button>
             </div>
         </label>
 
-    </div>
-    <div style="width: 100%;margin-top: 10px;">
-        <div class="container" style="width:400px; background-color: white;float: left;margin-right: 5%;">
-            <div class="table-responsive">
-                <p class="uploadlabel" style='margin-bottom:20px; text-align: center; color:#005ce6;font-weight: 800; font-size: 35px;text-shadow:2px 2px 2px #aaaaaa;'>
-                    Hello , {{ uname }}</p>
-                <table class="table borderless" align="center" style="font-size: 25px;">
+        <div style="width: 100%;height:500px;margin-top: 15px; background-color: white;box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.19);">
 
-                    <tr>
-                        <th *ngIf="!sflag"><button (click)="calculateSpace()" class="btn btn-primary">Show
-                                Storage</button></th>
-                        <th *ngIf="sflag"><button (click)="sflag=false" class="btn btn-primary"> Hide Storage</button>
-                        </th>
-                    </tr>
-                    <tr *ngIf="sflag">
-                        <th>Used Space :</th>
-                        <th> {{ space/1000 }} KB</th>
-                    </tr>
-                    <tr *ngIf="sflag">
-                        <th>Free Space : </th>
-                    </tr>
-                    <tr *ngIf="sflag">
-                        <th><button (click)="lflag=true">Free up Space</button></th>
-                    </tr>
-                </table>
-            </div>
-        </div>
-        <div class="gchart" style="float: right;">
-            <google-chart #chart [type]="type" [data]="data" [columnNames]="columnNames" [options]="options" [width]="width" [height]="height">
+
+
+
+
+
+            <google-chart id="chart" [type]="type" [data]="data" [columnNames]="columnNames" [options]="options" [width]="width" [height]="height">
             </google-chart>
-        </div>
+            <div class="text-center">
+                <button class="free" style="z-index: 4;width:170px;height:40px;" (click)="lflag=true">Free up Space</button>
+            </div>
 
+            <ng-container *ngIf="lflag" style="z-index: 4;overflow-y:scroll;width: 100%;height: 300px;">
+                <div style="display: block " *ngFor="let fileUpload of lst ">
+                    <div class="file">
+                        <img src="../../assets/pictures/file.png" style="width: 40px;height: 45px;"><br/>
+                        <a href="{{fileUpload.url}}">{{fileUpload.name}}</a>
+                    </div>
 
-    </div>
-
-
-
-
-
-    <ng-container *ngIf="lflag">
-        <div style="display: block" *ngFor="let fileUpload of lst">
-
-            <div style="width:370px;background-color:#ccebff; border-radius: 1rem;" class="jumbotron">
-
-                <div>
-
-                    <a href="{{fileUpload.url}}">{{fileUpload.name}} ({{fileUpload.size / 1000}} KB)</a><br /><br />
-                    <button (click)='deleteFile(fileUpload)' style="margin-top:10px;margin-bottom: 10px;" class="btn btn-danger">Delete</button>
+                    <a href="{{fileUpload.url}} ">{{fileUpload.name}} ({{fileUpload.size / 1000}} KB)</a><br /><br />
+                    <button (click)='deleteFile(fileUpload)' style="margin-top:10px;margin-bottom: 10px; " class="btn btn-danger ">Delete</button>
                     <br />
 
                 </div>
 
-            </div>
+            </ng-container>
+
         </div>
-    </ng-container>
-</div>
+
+
+
+
+
+
+    </div>
+
+    <div style="height: 20px;background-color: transparent; "></div>
 </div>
