--- a/src/app/shared/shared.component.html
+++ b/src/app/shared/shared.component.html
@@ -1,39 +1,50 @@
 <div>
     <h2 style="padding-top: 3em;">My folders</h2>
     <hr style="border-top:2px solid #0055ff;" />
-    <div *ngFor="let f of folders">
-        <ng-container *ngIf="f.folder.name.startsWith(uname)">
-            <p>Folder name : {{f.folder.name}} <button (click)="remove(f)" >Disable sharing</button></p>
-            <p>Shared with:</p>
-            <p *ngFor="let user of f.users">
-                {{user}}
-                <button (click)="removeUser(f,user)" >Remove</button>
-            </p>
+    <div *ngFor="let f of folders" style="display: inline-block;">
+        <div class="text-center" *ngIf="f.folder.name.startsWith(uname)" style="display: inline-block;margin-left: 20px;">
+            <img style="width: 45px;height: 45px;" src="../../assets/pictures/folder.png"><br/>
+            <p style="font-weight: 500;"> {{f.folder.name}}</p> <button (click)="remove(f)">Disable sharing</button>
+            <br/>
+            <div class="dropdown">
+                <br/>
+                <button class="btn btn-default dropdown-toggle" type="button" style="background-color: #008ae6;color: white;" id="menu1" data-toggle="dropdown">Shared With
+      <span class="caret"></span></button>
+                <ul style="box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.19);" class="dropdown-menu" role="menu" aria-labelledby="menu1">
+
+
+                    <li class="text-center" style="font-size: 15px;" *ngFor="let user of f.users" role="presentation"> {{user}} &nbsp;
+                        <button style="background-color: transparent;border: none;font-size: 17px;" (click)="removeUser(f,user)"><i style="color: red;" class="fas fa-trash-alt" aria-hidden="true"></i></button></li>
+
+                </ul>
+            </div>
+            <br/>
             <input type="text" [(ngModel)]="user" placeholder="Username">
-            <button (click)="addUser(f)" >Add new user</button>
-            <hr style="border-top:2px solid #0055ff;" />
-        <br/>
-        </ng-container>
+            <br/>
+            <button (click)="addUser(f)">Add new user</button>
+
+        </div>
     </div>
+    <br/>
     <button (click)="newShare()" class="btn btn-primary">Share new folder</button>
     <br/>
     <div *ngIf="new">
         Select folder
         <p *ngFor="let e of list">
-            <button (click)="select(e)" >{{e.name}}</button>
+            <button (click)="select(e)">{{e.name}}</button>
         </p>
-        
+
     </div>
     <div *ngIf="selectFlag">
         <button>{{ selected.folder.name }}</button><br/>
-        <label for="users" >Enter users you want to share with(user1,user2,...)</label>
-        <input id='users' [(ngModel)]="users" placeholder="Usernames" type="text" >
-        <button (click)="share()" >Share</button>
+        <label for="users">Enter users you want to share with(user1,user2,...)</label>
+        <input id='users' [(ngModel)]="users" placeholder="Usernames" type="text">
+        <button (click)="share()">Share</button>
     </div>
     <br/>
 
 
     <button (click)="showShared()">Shared with me</button>
     <br/>
-    <app-shared-list *ngIf="show" [list]="shared" ></app-shared-list>
+    <app-shared-list *ngIf="show" [list]="shared"></app-shared-list>
 </div>
