--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
     <img src="../../assets/pictures/network-4851079_1280.webp" style="width:100%;height:770px">
 
 
-    <div class="animate seven">
+    <div style="margin-top:20px" class="animate seven text-center">
         <span>C</span><span>L</span><span>O</span><span>U</span>
         <span>D</span><span>D</span><span>R</span><span>I</span><span>V</span><span>E</span><span>N</span>
 
