--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,10 +1,13 @@
 <div class="container-login" style="background-color:#EBF7FB; width: 100%; height: 100vh; overflow:auto; ">
     <div class="wrap-login text-center" style="padding : 30px 55px 30px 55px; ">
 
+        <div>
+            <div id="up" style="display: inline-block;margin-right: 10px;" class="sign-methods__link" (click)="onSignUp()">SignUp</div>
+            <div style="display: inline-block;font-size: 50px;font-weight:200;margin-right: 10px;">|</div>
+            <div id="in" style="display: inline-block;font-size: 50px;" class="sign-methods__link" (click)="onSignIn()">SignIn</div>
+        </div>
 
-        <p class="sign-methods__link" (click)="onSignUp()">SignUp</p>
-        <p class="sign-methods__link" (click)="onSignIn()">SignIn</p>
-
+        <div style="height: 20px;"></div>
 
         <!-- User Sing up -->
 
